File loading, miniature displaying, displaying proper part of image on main screen features added

--- a/GFK.vcxproj
+++ b/GFK.vcxproj
@@ -138,6 +138,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GUI.cpp" />
+    <ClCompile Include="GUIMyFrame1.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
