Added Brightness and contrast handlers

--- a/GFK.vcxproj
+++ b/GFK.vcxproj
@@ -72,11 +72,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LibraryPath>C:\wxWidgets-3.2.2.1\lib\vc_x64_lib;$(LibraryPath)</LibraryPath>
-    <ExternalIncludePath>C:\wxWidgets-3.2.2.1\include\;C:\wxWidgets-3.2.2.1\include\msvc;$(ExternalIncludePath)</ExternalIncludePath>
+    <IncludePath>C:\wxWidgets-3.2.2.1\include\msvc;C:\wxWidgets-3.2.2.1\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LibraryPath>C:\wxWidgets-3.2.2.1\lib\vc_x64_lib;$(LibraryPath)</LibraryPath>
-    <ExternalIncludePath>C:\wxWidgets-3.2.2.1\include\;C:\wxWidgets-3.2.2.1\include\msvc;$(ExternalIncludePath)</ExternalIncludePath>
+    <IncludePath>C:\wxWidgets-3.2.2.1\include\msvc;C:\wxWidgets-3.2.2.1\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
